# GRAiNITA_testbeam

./: .gitignore  CMakeLists.txt  GRAiNTIA.cc  README.md  Slice_analysis.ipynb  Slice_analysis_backup.ipynb  alight_maps_for_publication.ipynb  arrangeFiles.py  correctines_crosscheck.ipynb  correctines_crosscheck_diff_ab.ipynb  depthAnalysis.ipynb  excapeAnalysis.ipynb  excapeAnalysis_calibration.ipynb  init_vis.mac  merge_maps_results.ipynb  meshAnalysis.ipynb  non-uniformity_analysis.ipynb  non-uniformity_analysis_write_files_for_merging.ipynb  plots.tar  run_center_analysis.mac  run_depth_analysis.mac  run_electrons_25GeV.mac  run_gamma_1GeV.mac  run_gamma_25GeV.mac  run_side_mooving.mac  slices_file_organising.py  vis.mac
PSD/: Dark_current_removal.ipynb  Fast_only.ipynb  Slow_only.ipynb  analysis.ipynb  analysis_bad_and_good_mixed_up.ipynb  analysis_combined.ipynb  analysis_combined_separate_fits.ipynb  analysis_combined_separate_fits_5_exp.ipynb  analysis_slowWC.ipynb
PSD_protons/: Separate_number_of_protons_visualised.ipynb  analysis_combined.ipynb
include/: GRAiNTIAActionInitialization.hh  GRAiNTIACalorimeterHit.hh  GRAiNTIACommander.hh  GRAiNTIADetectorConstruction.hh  GRAiNTIAEventAction.hh  GRAiNTIAPSEnegyDeposit3D.hh  GRAiNTIAPrimaryGeneratorAction.hh  GRAiNTIARunAction.hh  GRAiNTIAScintillatorSD.hh  GRAiNTIASteppingAction.hh
src/: GRAiNTIAActionInitialization.cc  GRAiNTIACalorimeterHit.cc  GRAiNTIACommander.cc  GRAiNTIADetectorConstruction.cc  GRAiNTIAEventAction.cc  GRAiNTIAPSEnegyDeposit3D.cc  GRAiNTIAPrimaryGeneratorAction.cc  GRAiNTIARunAction.cc  (+2 more)
(+13 files in other folders)
